--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "webpack": "~1.5.3",
     "webpack-dev-server": "~1.7.0",
     "gulp-copy": "0.0.2",
-    "googleapis": "~0.8.0"
+    "googleapis": "~0.8.0",
+    "json2yaml": "~1.0.3",
+    "merge-stream": "~0.1.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
