--- a/gulp/data/hotoke.yml
+++ b/gulp/data/hotoke.yml
@@ -1,15 +1,51 @@
 ---
-  C1: "undefined/タグ/"
-  D1: "undefined/タグ/タイトル/"
-  B2: "item/"
-  C2: "item/メッセージ/"
-  D2: "item/メッセージ/未来への\"ジャンプ台\"でありたい/"
-  B3: "item/"
-  C3: "item/施設案内/"
-  D3: "item/施設案内/地域と世界に開かれた<br_pc>新しい教育の創造・創発の場/"
-  B4: "item/"
-  C4: "item/キャンパスライフ/"
-  D4: "item/キャンパスライフ/もうひとつの人間形成の場/"
-  B5: "item/"
-  C5: "item/情報公開/"
-  D5: "item/情報公開/関西外大OVERVIEW/"
+  pickup: 
+    goforit: 
+      title: "GO FOR it !"
+      subtitle: "-"
+      url: "http://www.kansaigaidai.ac.jp/special/gofor/"
+      target: "_blank"
+      id: "goforit"
+      type: "1"
+    oc2015: 
+      title: "OPEN CUMPUS 2015"
+      subtitle: "2015年のオープンキャンパス情報をご紹介"
+      url: "./contents/admissions/event/open_campus/"
+      target: "_self"
+      id: "oc2015"
+      type: "2"
+    gotenyama: 
+      title: "御殿山キャンパス(仮称)を建設"
+      subtitle: "英語国際学部を移転し、2018年4月開学をめざします"
+      url: "./gotenyama/"
+      target: "_self"
+      id: "gotenyama"
+      type: "2"
+    d2016: 
+      title: "大学案内2016"
+      subtitle: "大学案内2016の<br_pc>デジタルパンフレット"
+      url: "./2016/"
+      target: "_self"
+      id: "d2016"
+      type: "3"
+    elementary: 
+      title: "小学校教員コース"
+      subtitle: "英語キャリア学科<br_pc>小学校教員コースのご紹介"
+      url: "http://www.kansaigaidai.ac.jp/special/elementary/"
+      target: "_blank"
+      id: "elementary"
+      type: "3"
+    overview: 
+      title: "関西外大<br_pc>OVERVIEW"
+      subtitle: "関西外大が提供する<br_pc>学びの空間をご紹介"
+      url: "./overview/"
+      target: "_self"
+      id: "overview"
+      type: "3"
+    eikoku: 
+      title: "英語国際学部<br_pc>2014年4月開設"
+      subtitle: "英語国際学部・英語国際学科<br_pc>のご紹介"
+      url: "http://www.kansaigaidai.ac.jp/special/globalcomm/"
+      target: "_blank"
+      id: "eikoku"
+      type: "3"
