--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-copy": "0.0.2",
     "googleapis": "~0.8.0",
     "json2yaml": "~1.0.3",
-    "merge-stream": "~0.1.7"
+    "merge-stream": "~0.1.7",
+    "gulp-rename": "~1.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
