--- a/gulp/data/child.yml
+++ b/gulp/data/child.yml
@@ -2,10 +2,10 @@
   child: 
     info: 
       message: 
-        a: 
+        president: 
           title: "学長あいさつ"
           text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "a"
+          id: "president"
         b: 
           title: "建学の理念とあゆみ"
           text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
