--- a/gulp/data/child.yml
+++ b/gulp/data/child.yml
@@ -2,114 +2,128 @@
   child: 
     info: 
       message: 
-        president: 
-          title: "学長あいさつ"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "president"
-        b: 
-          title: "建学の理念とあゆみ"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "b"
-        c: 
-          title: "学部・学科構成図"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "c"
-        d: 
-          title: "学則"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "d"
-        e: 
-          title: "学歌"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "e"
-        f: 
-          title: "寄附金プロジェクト"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "f"
-        g: 
-          title: "関西外大通信 THE GAIDAI"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "g"
+        title: "メッセージ"
+        lists: 
+          president: 
+            title: "学長あいさつ"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "president"
+          b: 
+            title: "建学の理念とあゆみ"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "b"
+          c: 
+            title: "学部・学科構成図"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "c"
+          d: 
+            title: "学則"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "d"
+          e: 
+            title: "学歌"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "e"
+          f: 
+            title: "寄附金プロジェクト"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "f"
+          g: 
+            title: "関西外大通信 THE GAIDAI"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "g"
       facilities: 
-        h: 
-          title: "キャンパス情報"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "h"
-        i: 
-          title: "研究施設"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "i"
-        j: 
-          title: "教育支援センター"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "j"
+        title: "施設案内"
+        lists: 
+          h: 
+            title: "キャンパス情報"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "h"
+          i: 
+            title: "研究施設"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "i"
+          j: 
+            title: "教育支援センター"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "j"
       campuslife: 
-        k: 
-          title: "キャンパスカレンダー"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "k"
-        l: 
-          title: "クラブ紹介"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "l"
-        m: 
-          title: "学費・奨学金・教育ローン"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "m"
-        n: 
-          title: "学生マンション紹介"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "n"
-        o: 
-          title: "学生生活に関する相談"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "o"
+        title: "キャンパスライフ"
+        lists: 
+          k: 
+            title: "キャンパスカレンダー"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "k"
+          l: 
+            title: "クラブ紹介"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "l"
+          m: 
+            title: "学費・奨学金・教育ローン"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "m"
+          n: 
+            title: "学生マンション紹介"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "n"
+          o: 
+            title: "学生生活に関する相談"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "o"
       info: 
-        p: 
-          title: "教育情報の公表"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "p"
-        q: 
-          title: "財務情報"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "q"
-        r: 
-          title: "設置認可申請書・履行状況報告書"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "r"
-        s: 
-          title: "認証評価結果及び自己点検・評価"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "s"
-        t: 
-          title: "科学研究費補助金"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "t"
-        u: 
-          title: "学術情報"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "u"
-        v: 
-          title: "プライバシーポリシー"
-          text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
-          id: "v"
+        title: "情報公開"
+        lists: 
+          p: 
+            title: "教育情報の公表"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "p"
+          q: 
+            title: "財務情報"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "q"
+          r: 
+            title: "設置認可申請書・履行状況報告書"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "r"
+          s: 
+            title: "認証評価結果及び自己点検・評価"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "s"
+          t: 
+            title: "科学研究費補助金"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "t"
+          u: 
+            title: "学術情報"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "u"
+          v: 
+            title: "プライバシーポリシー"
+            text: "テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト"
+            id: "v"
     academics: 
       idea: 
-        mokuteki: 
-          title: "教育の目的・目標"
-          text: "もくてきもくてき"
-          id: "mokuteki"
+        title: "アイデア"
+        lists: 
+          mokuteki: 
+            title: "教育の目的・目標"
+            text: "もくてきもくてき"
+            id: "mokuteki"
       career: 
-        vision: 
-          title: "ヴィジョン"
-          text: "ビジョン！"
-          id: "vision"
-        career_top: 
-          title: "キャリア学科"
-          text: "えいきゃり"
-          id: "career_top"
+        title: "キャリア"
+        lists: 
+          vision: 
+            title: "ヴィジョン"
+            text: "ビジョン！"
+            id: "vision"
+          career_top: 
+            title: "キャリア学科"
+            text: "えいきゃり"
+            id: "career_top"
       foreign: 
-        vision: 
-          title: "外国語学部のビジョン"
-          text: "次世代国際人の育成を担う"
-          id: "vision"
+        title: "外国"
+        lists: 
+          vision: 
+            title: "外国語学部のビジョン"
+            text: "次世代国際人の育成を担う"
+            id: "vision"
