detail spreadsheet わける

--- a/gulp/data/grandson_info_message.yml
+++ b/gulp/data/grandson_info_message.yml
@@ -1,186 +1,186 @@
 ---
-  common:
+  common: 
     parent: "info"
     child: "message"
-    gGrandsons:
-      -
+    gGrandsons: 
+      - 
         me: "nenpyo"
         parent: "b"
-      -
+      - 
         me: "c"
         parent: "b"
-      -
+      - 
         me: "d"
         parent: "e"
-  lists:
-    president:
+  lists: 
+    president: 
       id: "president"
       title: "学長あいさつ"
       title_en: "-"
-      format: "noChild"
-      elements:
-        -
+      format: "-"
+      elements: 
+        - 
           type: "image"
           elem: "gakucho.jpg"
-        -
+        - 
           type: "title"
           elem: "未来への“ジャンプ台”でありたいと考えています"
-        -
+        - 
           type: "text"
           elem: "本学は太平洋戦争の終わった年の秋に誕生した「谷本英学院」を淵源として、68年の歴史を刻んできました。この間、関西外国語学校を経て、関西外国語短期大学となり、1966年には関西外国語大学が開学し、外国語学部を設置しました。その後、大学院に続いて国際言語学部を開設、短期大学も関西外国語大学短期大学部に改編されました。2011年4月には、英語のプロフェッショナルを育てる英語キャリア学部を開設し、4年制の3学部体制が誕生。2013年4月に英語キャリア学部の英語キャリア学科小学校教員コースをスタートさせ、2014年4月には国際言語学部を改組転換した英語国際学部を開設しました。このように、関西外大は地球全体を覆うグローバル化に対応するために進化し、外国語教育改革の最先端を走り続けようと、たゆまぬ努力を重ねています。"
-        -
+        - 
           type: "text"
           elem: "私学の私学たる所以は、建学の精神にあります。私たちは谷本英学院以来、「国際社会に貢献する豊かな教養を備えた人材の育成」と「公正な世界観に基づき、時代と社会の要請に応えていく実学」を建学の理念に掲げ、その具現化に鋭意努力を重ねてきました。2009年には、この建学の理念を土台とした関西外大の中・長期ビジョン「外大ルネサンス2009」を定めました。「キャンパスは“ちきゅう”」をキャッチフレーズに掲げた外大ビジョン・6つの柱を新たな指針として位置づけ、21世紀を歩んでいく本学の姿勢を内外に示しました。「ルネサンス」に基づくプロジェクトは、学部の新設や改革、外国人留学生のためのセミナーハウスや教室棟の新増設といった形で、次々と実行に移されています。"
-        -
+        - 
           type: "text"
           elem: "一方、本学の大きな特徴は全国でもトップクラスの留学ネットワークです。海外の単位互換提携校はことし4月現在で51カ国・地域の342大学。これらの大学に派遣する学生は毎年、長期留学、短期留学を合わせて約1,600人、本学が受け入れる外国人留学生は約700人に上ります。"
-        -
+        - 
           type: "text"
           elem: "グローバル化が一段と進む中、高い語学運用能力を持ち専門性を備えた国際人の育成は喫緊の課題です。「語学 + アルファ」――。それが、現在私たちが追い求めているものです。その方針に沿って、関西外大が生まれ変わろうとしています。2014年度には英語国際学部の開設に加えて、外国語学部のカリキュラム改定、高度国際職業人育成を主眼とした大学院改革を実行しました。中宮キャンパスでは2012年、インターナショナル・コミュニケーション・センター（ICC）が完成。2013年に完成した新教室棟・7号館にはキャリアセンターが入り、一層充実した就職支援が実現しました。教学システムだけでなく、ハード面も充実させ、世界中の学生たちをサポートしているのです。"
-        -
+        - 
           type: "text"
           elem: "「光陰矢のごとし」と言います。「時、人を待たず」とも言います。大学での4年、あるいは短大部での2年間という歳月は可能性に満ちた、かけがえのない時間です。未来へはばたく“ジャンプ台”と言ってもいいでしょう。私たち関西外国語大学は、創立者や前学長、卒業生らの思いを受け継ぎつつ、全力でみなさんを支え、大いなる未来を切り拓くお手伝いをしたいと考えています。"
-    b:
+    b: 
       id: "b"
       title: "建学の理念とあゆみ"
       title_en: "-"
-      format: "hasChild"
-      elements:
-        -
+      format: "-"
+      elements: 
+        - 
           type: "image"
           elem: "gakucho.jpg"
-        -
+        - 
           type: "title"
           elem: "未来への“ジャンプ台”でありたいと考えています"
-        -
+        - 
           type: "text"
           elem: "本学は太平洋戦争の終わった年の秋に誕生した「谷本英学院」を淵源として、68年の歴史を刻んできました。この間、関西外国語学校を経て、関西外国語短期大学となり、1966年には関西外国語大学が開学し、外国語学部を設置しました。その後、大学院に続いて国際言語学部を開設、短期大学も関西外国語大学短期大学部に改編されました。2011年4月には、英語のプロフェッショナルを育てる英語キャリア学部を開設し、4年制の3学部体制が誕生。2013年4月に英語キャリア学部の英語キャリア学科小学校教員コースをスタートさせ、2014年4月には国際言語学部を改組転換した英語国際学部を開設しました。このように、関西外大は地球全体を覆うグローバル化に対応するために進化し、外国語教育改革の最先端を走り続けようと、たゆまぬ努力を重ねています。"
-        -
+        - 
           type: "text"
           elem: "私学の私学たる所以は、建学の精神にあります。私たちは谷本英学院以来、「国際社会に貢献する豊かな教養を備えた人材の育成」と「公正な世界観に基づき、時代と社会の要請に応えていく実学」を建学の理念に掲げ、その具現化に鋭意努力を重ねてきました。2009年には、この建学の理念を土台とした関西外大の中・長期ビジョン「外大ルネサンス2009」を定めました。「キャンパスは“ちきゅう”」をキャッチフレーズに掲げた外大ビジョン・6つの柱を新たな指針として位置づけ、21世紀を歩んでいく本学の姿勢を内外に示しました。「ルネサンス」に基づくプロジェクトは、学部の新設や改革、外国人留学生のためのセミナーハウスや教室棟の新増設といった形で、次々と実行に移されています。"
-        -
+        - 
           type: "child"
           elem: "nenpyo"
-        -
+        - 
           type: "child"
           elem: "c"
-        -
+        - 
           type: "text"
           elem: "一方、本学の大きな特徴は全国でもトップクラスの留学ネットワークです。海外の単位互換提携校はことし4月現在で51カ国・地域の342大学。これらの大学に派遣する学生は毎年、長期留学、短期留学を合わせて約1,600人、本学が受け入れる外国人留学生は約700人に上ります。"
-        -
+        - 
           type: "text"
           elem: "グローバル化が一段と進む中、高い語学運用能力を持ち専門性を備えた国際人の育成は喫緊の課題です。「語学 + アルファ」――。それが、現在私たちが追い求めているものです。その方針に沿って、関西外大が生まれ変わろうとしています。2014年度には英語国際学部の開設に加えて、外国語学部のカリキュラム改定、高度国際職業人育成を主眼とした大学院改革を実行しました。中宮キャンパスでは2012年、インターナショナル・コミュニケーション・センター（ICC）が完成。2013年に完成した新教室棟・7号館にはキャリアセンターが入り、一層充実した就職支援が実現しました。教学システムだけでなく、ハード面も充実させ、世界中の学生たちをサポートしているのです。"
-        -
+        - 
           type: "text"
           elem: "「光陰矢のごとし」と言います。「時、人を待たず」とも言います。大学での4年、あるいは短大部での2年間という歳月は可能性に満ちた、かけがえのない時間です。未来へはばたく“ジャンプ台”と言ってもいいでしょう。私たち関西外国語大学は、創立者や前学長、卒業生らの思いを受け継ぎつつ、全力でみなさんを支え、大いなる未来を切り拓くお手伝いをしたいと考えています。"
-    nenpyo:
+    nenpyo: 
       id: "nenpyo"
       title: "歴史年表"
       title_en: "-"
-      format: "noChild"
-      elements:
-        -
+      format: "-"
+      elements: 
+        - 
           type: "image"
           elem: "gakucho.jpg"
-        -
+        - 
           type: "title"
           elem: "未来への“ジャンプ台”でありたいと考えています"
-        -
+        - 
           type: "text"
           elem: "本学は太平洋戦争の終わった年の秋に誕生した「谷本英学院」を淵源として、68年の歴史を刻んできました。この間、関西外国語学校を経て、関西外国語短期大学となり、1966年には関西外国語大学が開学し、外国語学部を設置しました。その後、大学院に続いて国際言語学部を開設、短期大学も関西外国語大学短期大学部に改編されました。2011年4月には、英語のプロフェッショナルを育てる英語キャリア学部を開設し、4年制の3学部体制が誕生。2013年4月に英語キャリア学部の英語キャリア学科小学校教員コースをスタートさせ、2014年4月には国際言語学部を改組転換した英語国際学部を開設しました。このように、関西外大は地球全体を覆うグローバル化に対応するために進化し、外国語教育改革の最先端を走り続けようと、たゆまぬ努力を重ねています。"
-        -
+        - 
           type: "text"
           elem: "私学の私学たる所以は、建学の精神にあります。私たちは谷本英学院以来、「国際社会に貢献する豊かな教養を備えた人材の育成」と「公正な世界観に基づき、時代と社会の要請に応えていく実学」を建学の理念に掲げ、その具現化に鋭意努力を重ねてきました。2009年には、この建学の理念を土台とした関西外大の中・長期ビジョン「外大ルネサンス2009」を定めました。「キャンパスは“ちきゅう”」をキャッチフレーズに掲げた外大ビジョン・6つの柱を新たな指針として位置づけ、21世紀を歩んでいく本学の姿勢を内外に示しました。「ルネサンス」に基づくプロジェクトは、学部の新設や改革、外国人留学生のためのセミナーハウスや教室棟の新増設といった形で、次々と実行に移されています。"
-        -
+        - 
           type: "text"
           elem: "一方、本学の大きな特徴は全国でもトップクラスの留学ネットワークです。海外の単位互換提携校はことし4月現在で51カ国・地域の342大学。これらの大学に派遣する学生は毎年、長期留学、短期留学を合わせて約1,600人、本学が受け入れる外国人留学生は約700人に上ります。"
-        -
+        - 
           type: "text"
           elem: "グローバル化が一段と進む中、高い語学運用能力を持ち専門性を備えた国際人の育成は喫緊の課題です。「語学 + アルファ」――。それが、現在私たちが追い求めているものです。その方針に沿って、関西外大が生まれ変わろうとしています。2014年度には英語国際学部の開設に加えて、外国語学部のカリキュラム改定、高度国際職業人育成を主眼とした大学院改革を実行しました。中宮キャンパスでは2012年、インターナショナル・コミュニケーション・センター（ICC）が完成。2013年に完成した新教室棟・7号館にはキャリアセンターが入り、一層充実した就職支援が実現しました。教学システムだけでなく、ハード面も充実させ、世界中の学生たちをサポートしているのです。"
-        -
+        - 
           type: "text"
           elem: "「光陰矢のごとし」と言います。「時、人を待たず」とも言います。大学での4年、あるいは短大部での2年間という歳月は可能性に満ちた、かけがえのない時間です。未来へはばたく“ジャンプ台”と言ってもいいでしょう。私たち関西外国語大学は、創立者や前学長、卒業生らの思いを受け継ぎつつ、全力でみなさんを支え、大いなる未来を切り拓くお手伝いをしたいと考えています。"
-    c:
+    c: 
       id: "c"
       title: "C"
       title_en: "-"
-      format: "noChild"
-      elements:
-        -
+      format: "-"
+      elements: 
+        - 
           type: "image"
           elem: "gakucho.jpg"
-        -
+        - 
           type: "title"
           elem: "未来への“ジャンプ台”でありたいと考えています"
-        -
+        - 
           type: "text"
           elem: "本学は太平洋戦争の終わった年の秋に誕生した「谷本英学院」を淵源として、68年の歴史を刻んできました。この間、関西外国語学校を経て、関西外国語短期大学となり、1966年には関西外国語大学が開学し、外国語学部を設置しました。その後、大学院に続いて国際言語学部を開設、短期大学も関西外国語大学短期大学部に改編されました。2011年4月には、英語のプロフェッショナルを育てる英語キャリア学部を開設し、4年制の3学部体制が誕生。2013年4月に英語キャリア学部の英語キャリア学科小学校教員コースをスタートさせ、2014年4月には国際言語学部を改組転換した英語国際学部を開設しました。このように、関西外大は地球全体を覆うグローバル化に対応するために進化し、外国語教育改革の最先端を走り続けようと、たゆまぬ努力を重ねています。"
-        -
+        - 
           type: "text"
           elem: "私学の私学たる所以は、建学の精神にあります。私たちは谷本英学院以来、「国際社会に貢献する豊かな教養を備えた人材の育成」と「公正な世界観に基づき、時代と社会の要請に応えていく実学」を建学の理念に掲げ、その具現化に鋭意努力を重ねてきました。2009年には、この建学の理念を土台とした関西外大の中・長期ビジョン「外大ルネサンス2009」を定めました。「キャンパスは“ちきゅう”」をキャッチフレーズに掲げた外大ビジョン・6つの柱を新たな指針として位置づけ、21世紀を歩んでいく本学の姿勢を内外に示しました。「ルネサンス」に基づくプロジェクトは、学部の新設や改革、外国人留学生のためのセミナーハウスや教室棟の新増設といった形で、次々と実行に移されています。"
-        -
+        - 
           type: "text"
           elem: "一方、本学の大きな特徴は全国でもトップクラスの留学ネットワークです。海外の単位互換提携校はことし4月現在で51カ国・地域の342大学。これらの大学に派遣する学生は毎年、長期留学、短期留学を合わせて約1,600人、本学が受け入れる外国人留学生は約700人に上ります。"
-        -
+        - 
           type: "text"
           elem: "グローバル化が一段と進む中、高い語学運用能力を持ち専門性を備えた国際人の育成は喫緊の課題です。「語学 + アルファ」――。それが、現在私たちが追い求めているものです。その方針に沿って、関西外大が生まれ変わろうとしています。2014年度には英語国際学部の開設に加えて、外国語学部のカリキュラム改定、高度国際職業人育成を主眼とした大学院改革を実行しました。中宮キャンパスでは2012年、インターナショナル・コミュニケーション・センター（ICC）が完成。2013年に完成した新教室棟・7号館にはキャリアセンターが入り、一層充実した就職支援が実現しました。教学システムだけでなく、ハード面も充実させ、世界中の学生たちをサポートしているのです。"
-        -
+        - 
           type: "text"
           elem: "「光陰矢のごとし」と言います。「時、人を待たず」とも言います。大学での4年、あるいは短大部での2年間という歳月は可能性に満ちた、かけがえのない時間です。未来へはばたく“ジャンプ台”と言ってもいいでしょう。私たち関西外国語大学は、創立者や前学長、卒業生らの思いを受け継ぎつつ、全力でみなさんを支え、大いなる未来を切り拓くお手伝いをしたいと考えています。"
-    d:
+    d: 
       id: "d"
       title: "D"
       title_en: "-"
-      format: "noChild"
-      elements:
-        -
+      format: "-"
+      elements: 
+        - 
           type: "image"
           elem: "gakucho.jpg"
-        -
+        - 
           type: "title"
           elem: "未来への“ジャンプ台”でありたいと考えています"
-        -
+        - 
           type: "text"
           elem: "本学は太平洋戦争の終わった年の秋に誕生した「谷本英学院」を淵源として、68年の歴史を刻んできました。この間、関西外国語学校を経て、関西外国語短期大学となり、1966年には関西外国語大学が開学し、外国語学部を設置しました。その後、大学院に続いて国際言語学部を開設、短期大学も関西外国語大学短期大学部に改編されました。2011年4月には、英語のプロフェッショナルを育てる英語キャリア学部を開設し、4年制の3学部体制が誕生。2013年4月に英語キャリア学部の英語キャリア学科小学校教員コースをスタートさせ、2014年4月には国際言語学部を改組転換した英語国際学部を開設しました。このように、関西外大は地球全体を覆うグローバル化に対応するために進化し、外国語教育改革の最先端を走り続けようと、たゆまぬ努力を重ねています。"
-        -
+        - 
           type: "text"
           elem: "私学の私学たる所以は、建学の精神にあります。私たちは谷本英学院以来、「国際社会に貢献する豊かな教養を備えた人材の育成」と「公正な世界観に基づき、時代と社会の要請に応えていく実学」を建学の理念に掲げ、その具現化に鋭意努力を重ねてきました。2009年には、この建学の理念を土台とした関西外大の中・長期ビジョン「外大ルネサンス2009」を定めました。「キャンパスは“ちきゅう”」をキャッチフレーズに掲げた外大ビジョン・6つの柱を新たな指針として位置づけ、21世紀を歩んでいく本学の姿勢を内外に示しました。「ルネサンス」に基づくプロジェクトは、学部の新設や改革、外国人留学生のためのセミナーハウスや教室棟の新増設といった形で、次々と実行に移されています。"
-        -
+        - 
           type: "text"
           elem: "一方、本学の大きな特徴は全国でもトップクラスの留学ネットワークです。海外の単位互換提携校はことし4月現在で51カ国・地域の342大学。これらの大学に派遣する学生は毎年、長期留学、短期留学を合わせて約1,600人、本学が受け入れる外国人留学生は約700人に上ります。"
-        -
+        - 
           type: "text"
           elem: "グローバル化が一段と進む中、高い語学運用能力を持ち専門性を備えた国際人の育成は喫緊の課題です。「語学 + アルファ」――。それが、現在私たちが追い求めているものです。その方針に沿って、関西外大が生まれ変わろうとしています。2014年度には英語国際学部の開設に加えて、外国語学部のカリキュラム改定、高度国際職業人育成を主眼とした大学院改革を実行しました。中宮キャンパスでは2012年、インターナショナル・コミュニケーション・センター（ICC）が完成。2013年に完成した新教室棟・7号館にはキャリアセンターが入り、一層充実した就職支援が実現しました。教学システムだけでなく、ハード面も充実させ、世界中の学生たちをサポートしているのです。"
-        -
+        - 
           type: "text"
           elem: "「光陰矢のごとし」と言います。「時、人を待たず」とも言います。大学での4年、あるいは短大部での2年間という歳月は可能性に満ちた、かけがえのない時間です。未来へはばたく“ジャンプ台”と言ってもいいでしょう。私たち関西外国語大学は、創立者や前学長、卒業生らの思いを受け継ぎつつ、全力でみなさんを支え、大いなる未来を切り拓くお手伝いをしたいと考えています。"
-    e:
+    e: 
       id: "e"
       title: "E"
       title_en: "-"
-      format: "hasChild"
-      elements:
-        -
+      format: "-"
+      elements: 
+        - 
           type: "image"
           elem: "gakucho.jpg"
-        -
+        - 
           type: "title"
           elem: "未来への“ジャンプ台”でありたいと考えています"
-        -
+        - 
           type: "text"
           elem: "本学は太平洋戦争の終わった年の秋に誕生した「谷本英学院」を淵源として、68年の歴史を刻んできました。この間、関西外国語学校を経て、関西外国語短期大学となり、1966年には関西外国語大学が開学し、外国語学部を設置しました。その後、大学院に続いて国際言語学部を開設、短期大学も関西外国語大学短期大学部に改編されました。2011年4月には、英語のプロフェッショナルを育てる英語キャリア学部を開設し、4年制の3学部体制が誕生。2013年4月に英語キャリア学部の英語キャリア学科小学校教員コースをスタートさせ、2014年4月には国際言語学部を改組転換した英語国際学部を開設しました。このように、関西外大は地球全体を覆うグローバル化に対応するために進化し、外国語教育改革の最先端を走り続けようと、たゆまぬ努力を重ねています。"
-        -
+        - 
           type: "text"
           elem: "私学の私学たる所以は、建学の精神にあります。私たちは谷本英学院以来、「国際社会に貢献する豊かな教養を備えた人材の育成」と「公正な世界観に基づき、時代と社会の要請に応えていく実学」を建学の理念に掲げ、その具現化に鋭意努力を重ねてきました。2009年には、この建学の理念を土台とした関西外大の中・長期ビジョン「外大ルネサンス2009」を定めました。「キャンパスは“ちきゅう”」をキャッチフレーズに掲げた外大ビジョン・6つの柱を新たな指針として位置づけ、21世紀を歩んでいく本学の姿勢を内外に示しました。「ルネサンス」に基づくプロジェクトは、学部の新設や改革、外国人留学生のためのセミナーハウスや教室棟の新増設といった形で、次々と実行に移されています。"
-        -
+        - 
           type: "text"
           elem: "一方、本学の大きな特徴は全国でもトップクラスの留学ネットワークです。海外の単位互換提携校はことし4月現在で51カ国・地域の342大学。これらの大学に派遣する学生は毎年、長期留学、短期留学を合わせて約1,600人、本学が受け入れる外国人留学生は約700人に上ります。"
-        -
+        - 
           type: "text"
           elem: "グローバル化が一段と進む中、高い語学運用能力を持ち専門性を備えた国際人の育成は喫緊の課題です。「語学 + アルファ」――。それが、現在私たちが追い求めているものです。その方針に沿って、関西外大が生まれ変わろうとしています。2014年度には英語国際学部の開設に加えて、外国語学部のカリキュラム改定、高度国際職業人育成を主眼とした大学院改革を実行しました。中宮キャンパスでは2012年、インターナショナル・コミュニケーション・センター（ICC）が完成。2013年に完成した新教室棟・7号館にはキャリアセンターが入り、一層充実した就職支援が実現しました。教学システムだけでなく、ハード面も充実させ、世界中の学生たちをサポートしているのです。"
-        -
+        - 
           type: "child"
           elem: "d"
-        -
+        - 
           type: "text"
           elem: "「光陰矢のごとし」と言います。「時、人を待たず」とも言います。大学での4年、あるいは短大部での2年間という歳月は可能性に満ちた、かけがえのない時間です。未来へはばたく“ジャンプ台”と言ってもいいでしょう。私たち関西外国語大学は、創立者や前学長、卒業生らの思いを受け継ぎつつ、全力でみなさんを支え、大いなる未来を切り拓くお手伝いをしたいと考えています。"
